@@ -1,3 +1,9 @@
+Tue Dec 21 00:46:20 2010  KOSAKI Motohiro  <kosaki.motohiro@gmail.com>
+
+	* thread.c (thread_cleanup_func): Don't touch native threading
+	  resource at fork. Sadly this is purely bandaid. We need to
+	  implement proper fix later. [Bug #4169] [ruby-core:33767]
+
 Tue May 24 07:06:34 2011  Hidetoshi NAGAI  <nagai@ai.kyutech.ac.jp>
 
 	* ext/tk/lib/tk/extconf.rb: search directories for 64bit library (e.g.
